add package users